# StudyPlatform

./: .gitignore  .gitmodules  5.41.tmp  5.45.md  6.03.md  6.05  6.07.md  6.08.md  6.09.md  6.10.md  6.11.md  6.12.md  6.13.md  6.14.md  6.15.md  6.16.md  6.17.md  6.18.md  6.19.md  6.2.tmp  6.20.md  6.21.md  6.22.md  6.23.md  6.24.md  7.9.0.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  TODO  compile_commands.json  go.mod  go.sum  index.html  justfile  pubspec.yaml  tags  (+3 more)
.github/workflows/: ci.yml
Cpp/: CMakeLists.txt
Cpp/include/: gfunc.hpp  global.hpp  signals.hpp  var.hpp
Cpp/src/: FuncBuilding.cpp  FuncCache.cpp  FuncFixed.cpp  FuncLocked.cpp  FuncLockedFn.cpp  FuncPair1.cpp  FuncSimple.cpp  FuncSimpleFn.cpp  FuncUsed.cpp  FuncUsedFn.cpp  Main.cpp
Cpp/tools/MarkdownTool/MainCode/: CMakeLists.txt  Makefile
Cpp/tools/MarkdownTool/MainCode/include/: fileselector.hpp  markdowntoolmain.hpp  simple.hpp
Cpp/tools/MarkdownTool/MainCode/src/: main.cpp  markdowntoolmain.cpp
Golang/: Makefile  go.mod  go.sum
Golang/cmd/: main.go
android/app/: build.gradle.kts
cmd/: main.go
docs/: #ProjectLog.md#  20250908周计划.md  20250908周进度.md  20250915周计划.md  DECISION.md  ProjectCode.cpp  ProjectDeadline.md  ProjectDocs.rst  ProjectDocsLang.rst  ProjectDocsSimple.md  ProjectDocsSimple.rst  ProjectHistory.md  ProjectHistory.rst  ProjectLog.md  ProjectLog.rst  ProjectLog20251007.md  ProjectLog20251007.rst  ProjectReleasesLog.md  ProjectReleasesLog.rst  ProjectSpeed.md  ProjectSpeed.rst  ProjectTodo.cpp  ProjectTodo.rst  SPECIAL.md  STANDARD.md  TOOLCHAIN.md
docs/GoPlus/: Arc.md  Future.md
docs/apis/: env.md
go/: go.sum
go/cgo/: RustRand.h
go/cmd/: main.go
go/docs/: GoSyntax.md
go/util/: NoteTool  SpaceGo
include/: function.hpp  gfunc.hpp  global.hpp  headers.hpp  lambda.hpp  macro.hpp  signals.hpp  simple.hpp  type.hpp  var.hpp  variable.hpp
include/func/: lambda.hpp  simple.hpp
include/lang/: macro.hpp
include/mine/: MyColour.h  MyFlags.h
include/rust/: BankJuanUseJiFenUse.hpp
include/tools/: markdowntoolmain.hpp
include/utils/: algo.hpp  cast.hpp  poly.hpp  smartarray.hpp
internal/abookchao/: abookchao.go
internal/apao/: apao.go
internal/application/: controller.go
internal/awenguan/: awenguan.go
internal/gfunc/: ancientjuan.go  ancientwup.go
internal/global/: azheng.go  file.go  var.go
internal/interfaces/: ipage.go
internal/pages/: ancientguanmainpage.go  ancientguanwenmainpage.go  ancientguanwupage.go  ancientguanwuzhaopage.go  ancientjuanmainpage.go  ancientmainpage.go  ancientshopbaowupage.go  ancientshopbookpage.go  ancientshopeasyjinpage.go  ancientshopguwanpage.go  ancientshopmainpage.go  ancientsoldbaowupage.go  ancientsoldmainpage.go  ancientthingbaowupage.go  ancientthingbookpage.go  ancientthingcaipage.go  ancientthingguwanpage.go  ancientthingmainpage.go  ancientthingpaopage.go  bankjuanmainpage.go  bankpage.go  baoshichouallpage.go  baoshimainpage.go  baoshishoppage.go  calcmainpage.go  calcshoppage.go  calcstartaddpage.go  calcstartpage.go  cardsmainpage.go  lihepage.go  mainpage.go  ownpage.go  ownthingallpage.go  ownthingmainpage.go  ownthingpagepage.go  ownthingshoppage.go  settingmainpage.go  toolspage.go  tsjinmainpage.go  tsmainpage.go  (+14 more)
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/logic/: ajuan.dart  apao.dart  asword.dart  ausebao.dart  ausebookc.dart  ausebooks.dart  awenguan.dart  awenguanzheng.dart  awubing.dart  awuzheng.dart  bank.dart  baoshi.dart  bookchao.dart  calc_poly.dart  calc_shop.dart  env_mod.dart  exec.dart  free.dart  jifen.dart  jin_mang.dart  lihe.dart  othing_shop.dart  shopbao.dart  shopbook.dart  shopgu.dart  state.dart  time_end.dart  tongy.dart  trade.dart  tsjin.dart  xianhe.dart  xiansword.dart  xxianlu.dart  yinbi.dart
lib/pages/: home_page.dart  own_page.dart  pages.dart
lib/tool/: addfile.dart  cards.dart  check_file.dart  file_password.dart  fileinter.dart  logger.dart  once_file.dart  poly.dart  random.dart  statefile.dart  stopwatch.dart  timer.dart
lib/vars/: backbutton.dart  cards.dart  dialog.dart  dirs.dart  files.dart  logger.dart  rule.dart  simple.dart  styles.dart  timers.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
note/: 20250908周计划.md  ProjectNote-20251006-10:33.rst  ProjectNote-20251008-18:15.rst  ProjectNote-20251012-22:00.rst  ProjectNote-20251019-12:08.rst  ProjectNote-20251019-15:45.rst  ProjectNote-20251214.md
pkg/cgo/: rand.go
pkg/simple/: color.go  dialog.go
pkg/util/: addfile.go  checkfile.go  interfaces.go  logger.go  oncefile.go  passwordfile.go  tffile.go
plan/: ProjectPlan20251130.md
plan/proj/: ProjectPlan20251206.md
project/: ProjectHistory.md  ProjectIdea.md  ProjectLog.md  ProjectLog1.md  ProjectLogOld.md  ProjectSpeed.md
rust/: package.json
rust/apis/: env.md  error.md
rust/src/: App.vue
rust/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
script/: release
share/applications/: 学习平台.desktop
share/docs/: NeovimColorschemes.rst  NeovimLightColorschemes.rst  PerlReBasic.rst  RSTSyntaxBasic.rst  TmuxUsage.rst  UTF8SomeChar.rst  Usage-screen.rst  Usage-tmux.rst  UsageBasic-screen.rst  UsageBasic-tmux.rst
src/: #FunctionBuilding.cpp#  #FunctionNow.cpp#  App.vue  Comment.cpp  FuncBuilding.cpp  FuncCache.cpp  FuncFixed.cpp  FuncFixedFn.cpp  FuncLocked.cpp  FuncLockedFn.cpp  FuncPair1.cpp  FuncSignals.cpp  FuncSimple.cpp  FuncSimpleFn.cpp  FuncUsed.cpp  FunctionBuilding.cpp  FunctionFixed.cpp  FunctionLocked.cpp  FunctionNow.cpp  FunctionOld.cpp  FunctionSimple.cpp  FunctionUsed.cpp  Main.cpp
src-tauri/: Cargo.toml
src-tauri/src/: env.rs  error.rs  lib.rs
src/application/: controller.go
src/command/: env.ts  password.ts
src/interfaces/: ipage.go
src/pages/: ancientmainpage.go  calcmainpage.go  calcshoppage.go  mainpage.go  ownpage.go  ownthingallpage.go  (+3 more)
test/: widget_test.dart
todo/: template.md
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+355 files in other folders)
